# Offpunk History

## 3.1 - Unreleased
- Cut startup time in half by lazy loading optional modules
- Adding support for tmux clipboard and cleaning clipboard code (by Stephen)
- PACKAGING: use hatch-requirements-txt (by link2xt)
- Lot of typos fixed (by Sebastian Rasmussen)

## 3.0 - February 9th 2026
Changes since 2.8
Important changes:
- "opnk" is deprecated and replaced by "openk"
- Default image size now 100 instead of 40 (can be restored with "set images_size 40")
- Links to available feeds are now displayed at the bottom of HTML pages
- "root" has been modified to go to the root of the capsule/userspace "root /" for real root
- Images are now displayed in Gemini. This can be disabled with "set gemini_images false"
- "ls" command is deprecated
Features:
- Offpunk is now translatable (by JMCS). Translations in ES, GC (JMCS) and NL (Bert Livens)
- Add "unmerdify" tool to extract content from HTML if "ftr_site_config" is set (by Vincent Jousse)
- new "xkcdpunk" command-line tool to directly access your XKCD comics
- new "websearch" command which default to wiby.me
- new "share" command to send a page by email
- new "reply" command to send an email to the author of the page
- "cookies" command and http cookies are now supported in netcache (by Urja)
- "set default_cmd" now allows to configure what happen on empty lines
- "view switch" changes between readable/full view (by Andrew Fowlie)
- customize prompt with "set prompt_on" and "set prompt_off" (by Andrew Fowlie)
- "help help" now sends an email to the offpunk-users mailing-list
- "links" command now display all links
- new "blocked_link" object in theme. By default, blocked link are in red.
- new "theme preset" to allow switching between multiple hardcoded themes like "yellow","cyan" or "bw"
Others:
- In "lists", only consider files ending with .gmi (bug #46 by woffs)
- support for new links color in gopher (by JMCS)
- fix an off by one bug in "cp url XX" 