@@ -215,7 +215,7 @@ class AbstractRenderer:
         # self.mime should be used only in renderer with multiple mime
         self.mime = None
         # The library used to clean the HTML
-        self.cleanlib = _("No cleaning required")
+        self.cleanlib = {} 
         #url redirections
         self.redirects = redirects
 
@@ -522,7 +522,10 @@ class AbstractRenderer:
         return self.last_mode
 
     def get_cleanlib(self):
-        return self.cleanlib
+        if self.last_mode in self.cleanlib.keys():
+            return self.cleanlib[self.last_mode]
+        else:
+            return _("No cleaning found for mode") + " %s"%self.last_mode
 
     def get_link(self, nb):
         links = self.get_links()
@@ -1629,11 +1632,11 @@ class HtmlRenderer(AbstractRenderer):
         # the real render_html hearth
         # We will transform the body into a "summary" (clean-up version)
         summary = None
-        self.cleanlib = ""
+        self.cleanlib[mode] = ""
         # if mode full, we don’t clean anything
         if mode in ["full", "full_links_only"]:
             summary = body
-            self.cleanlib += "Full as requested"
+            self.cleanlib[mode] += _("Full as requested")
         # let’s try unmerdify
         elif load_UNMERDIFY(self.options):
             ftr = ftr_site_config=self.options["ftr_site_config"]
@@ -1643,24 +1646,24 @@ class HtmlRenderer(AbstractRenderer):
                     summary = unmerdify.unmerdify_html(body,url=self.url,\
                             ftr_site_config=ftr,NOCONF_FAIL=False)
                 except Exception as e:
-                    self.cleanlib += "Unmerdify CRASH - %s - "%e
+                    self.cleanlib[mode] += _("Unmerdify CRASH") + "- %s - "%e
                 if not summary:
-                    self.cleanlib += "Unmerdify failed - returns empty html"
+                    self.cleanlib[mode] += _("Unmerdify failed - returns empty html")
                 else:
-                    self.cleanlib += "Unmerdify"
+                    self.cleanlib[mode] += _("Unmerdify")
         if not summary:
             # if no summary from unmerdify, we try readability
             if self.HAS_READABILITY:
                 try:
                     readable = Document(body)
                     summary = readable.summary()
-                    self.cleanlib += " - Readability"
+                    self.cleanlib[mode] += _("Readability")
                 except Exception as e:
                     summary = body
-                    self.cleanlib += " - Full (Readability failed) %s"%e
+                    self.cleanlib[mode] += _("Full (Readability failed)") + "%s"%e
             else:
                 summary = body
-                self.cleanlib += " - Full (No readability installed)"
+                self.cleanlib[mode] += _("Full (No readability installed)")
         soup = BeautifulSoup(summary, "html.parser")
         # soup = BeautifulSoup(summary, 'html5lib')
         if soup:
